03-svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: wordpress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
